Fixed name label squishing other components

--- a/photon/src/pages/profile/profile.scss
+++ b/photon/src/pages/profile/profile.scss
@@ -84,6 +84,7 @@ page-profile {
   }
 
   .name-label {
+    margin-top: 2%;
     margin-bottom: 0;
   }
 
